# Otrazhenie

./: .gitignore  Dockerfile  README.md  TODO.md  format_project.py  pyproject.toml  requirements.txt
app/: LICENSE  README.md  __init__.py  forms.py  main.py  schemas.py  test.py
app/analyzers/: inci_data.csv  qr_reader.py
app/auth/rbac/: README.md  constants.py  permissions.py  seed_admin.py  seed_roles_permissions.py  service.py
app/core/: logging_config.py
app/db/: crud.py  csv_to_db.py  encrypt.py  ingredient_categories.csv  models.py  session.py
app/db/csv_files/: LICENSE  inci_data.csv  ingredient_categories.csv  ingredients.csv
app/exceptions/: validation.py
app/routes/: auth.py  diary.py  handle_scan.py  handle_search.py  index.py  manual_analysis.py  profile.py  recommendations.py  results.py
app/schemas/: product_dto.py  products_schema.py  user_schema.py
app/services/: product_lookup_service.py  user_service.py
app/static/css/: fullpage.css  index.css  style.css
app/templates/: base.html  design.html  diary.html  home.html  index.html  manual_input.html  product_info.html  profile.html  recommendations.html  results.html
app/templates/auth/: login.html  register.html
app/templates/fullpage/: base.html  diary.html  index.html  ingredient_detail.html  product_info.html  profile.html  recommendations.html  results.html  scan.html
app/templates/fullpage/auth/: login.html  register.html
tests/: conftest.py  test_mock.py  test_user_service.py
tests/users/: test_user_schema.py  test_user_service.py
tg_bot/: otrazhenie_bot.py
